--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>G. Vieira</title>
 </head>
+
 <body>
     <header></header>
-    <main></main>
+    <main class="apresentacao">
+        <section class="a_conteudo">
+        <h1 class="ac_titulo">Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
+        <p class="ac_texto">Olá! Sou Giullia Vieira, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <div class="a_links">
+                <a class="al_link" href="https://www.instagram.com/vieiraagiullia?igsh=OXg4ZjluZ283eHFh">Instagram</a>
+                <a class="al_link" href="https://github.com/VieiraGiullia">GitHub</a>
+            </div>    
+        </section>
+        <img src="Imagem.png" alt="foto da Giullia em uma varanda, com o fundo de arvores, no C.In">
+    </main>
     <footer></footer>
 </body>
 </html>
