--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>G. Vieira</title>
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav class="menu">
+            <a class="m_link" href="index.html">Home</a>
+            <a class="m_link" href="about.html">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="a_conteudo">
         <h1 class="ac_titulo">Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
         <p class="ac_texto">Olá! Sou Giullia Vieira, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="a_links">
-                <a class="al_link" href="https://www.instagram.com/vieiraagiullia?igsh=OXg4ZjluZ283eHFh">Instagram</a>
-                <a class="al_link" href="https://github.com/VieiraGiullia">GitHub</a>
+                <h2 class="ac_subtitulo">Acesse minhas redes</h2>
+                <a class="al_link" href="https://github.com/VieiraGiullia"> <img src="./assets/github.png" alt="logo do GitHub">GitHub</a>
+                <a class="al_link" href="https://github.com/VieiraGiullia"> <img src="./assets/linkedin.png" alt="logo do linkedIn">LinkedIn</a>
+                <a class="al_link" href="https://github.com/VieiraGiullia"> <img src="./assets/twitter-novo.png" alt="logo do twitter">Twitter</a>
             </div>    
         </section>
-        <img src="Imagem.png" alt="foto da Giullia em uma varanda, com o fundo de arvores, no C.In">
+        <img src="/assets/Imagem.png" alt="foto da Giullia em uma varanda, com o fundo de arvores, no C.In">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>desenvolvido por Giullia</p>
+    </footer>
 </body>
 </html>
