--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="al_link" href="https://github.com/VieiraGiullia"> <img src="./assets/twitter-novo.png" alt="logo do twitter">Twitter</a>
             </div>    
         </section>
-        <img src="/assets/Imagem.png" alt="foto da Giullia em uma varanda, com o fundo de arvores, no C.In">
+        <img class="a_img" src="/assets/Imagem.png" alt="foto da Giullia em uma varanda, com o fundo de arvores, no C.In">
     </main>
     <footer class="rodape">
         <p>desenvolvido por Giullia</p>
